# jaffle-shop

./: dbt_project.yml  profiles.yml
.github/workflows/: branch_deployments.yml  deploy.yml
jaffle_shop/: pyproject.toml  setup.py
